# fula-mail

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
migrations/postgres/: 001_mail_schema.sql  002_relay_config.sql  003_hardening.sql  004_outbound_queue.sql  005_cc_bcc.sql  006_tags.sql
src/: auth.rs  config.rs  crypto.rs  db.rs  dns.rs  error.rs  handlers.rs  inbound.rs  main.rs  outbound.rs  pinning.rs  push.rs  secrets.rs  server.rs  smtp.rs
